# tintin

./: .gitignore  Makefile.am  README.md  SConstruct  configure.in  cut_panels.py  generate_deepzoom_tiles.py  index.html  panels.py  resize_panels.py  tintin.dzi
src/: Bitmap.cpp  Bitmap.h  Makefile  Makefile.am  SmartPointer.h  filter_panels.cpp  find_panel_boxes.cpp  make_mosaic.cpp  panel_boxes.cpp
